--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/phish108/jstest-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.3",
-    "@actions/github": "^2.1.1"
+    "@actions/github": "^2.1.1",
+    "semver": "^7.1.3"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.21.1",
