--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,10 +24,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        CI: true
+    # - run: npm run build --if-present
+    # - run: npm test
+    #   env:
+    #     CI: true
     - run: npm run package
     - run: git commit -m "updated dist file $GITSHA" -a 
       env:
