--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'jstest'
-description: 'figuring out how to call git meta data from gh actions'
+description: 'lightning fast autotagger for semver tagging'
 inputs:
   github-token:  # id of input
     description: 'the GH token to connect to github from the action'
