--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# local ignores
+secrets.json
+tryout.js
+
 # Logs
 logs
 *.log
@@ -61,6 +65,7 @@ typings/
 
 # Optional REPL history
 .node_repl_history
+
 
 # Output of 'npm pack'
 *.tgz
