drop automatic minor releases from owner

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,32 +19,24 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - id: contributor 
-      run: echo ::set-output name=release::minor
-      if: github.actor == 'phish108'
-
-    - id: bot
-      run: echo ::set-output name=release::patch
-      if: startsWith(github.actor, 'dependabot')
-
     - uses: actions/checkout@v2
     - run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
+        node-version: ${{ matrix.node-version }} 
     
     - id: tagger
       uses: phish108/autotag-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        bump: ${{ steps.contributor.outputs.release || steps.bot.outputs.release }}
         dry-run: 'TRUE'
         
     - run: | 
+        npm ci
         npm run package
         npm --no-git-tag-version --allow-same-version version ${{ steps.tagger.outputs.new-tag }} 
         git commit -m "updated dist file for $GITSHA" -a 
@@ -59,4 +51,3 @@ jobs:
     - uses: phish108/autotag-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        bump: ${{ steps.contributor.outputs.release || steps.bot.outputs.release }}
