checkout master branch for autorelease

--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -33,6 +33,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+          ref: master
     - run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
