--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,11 +28,26 @@ jobs:
         node-version: ${{ matrix.node-version }} 
     
     - id: tagger
-      uses: phish108/autotag-action@master
+      uses: phish108/autotag-action@1.2.26
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         dry-run: 'TRUE'
-        
+    
+    - name: Autotag Draft
+        uses: phish108/autotag-action@master
+        id: taggerTest
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          dry-run: 'true'
+
+      - name: verify Tags
+        run: |
+          if [ "${{ steps.tagger.outputs.new-tag }}" != "${{ steps.taggerTest.outputs.new-tag }}" ]
+          then
+            exit 1
+          fi
+
     - run: | 
         npm ci
         npm run package
@@ -47,6 +62,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     
-    - uses: phish108/autotag-action@master
+    - uses: phish108/autotag-action@1.2.26
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
