--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -45,11 +45,27 @@ jobs:
         node-version: ${{ matrix.node-version }} 
     
     - id: tagger
-      uses: phish108/autotag-action@master
+      uses: phish108/autotag-action@1.1.26
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         branch: master
         dry-run: 'TRUE'
+    
+    # may fail
+    - name: Autotag Draft
+        uses: phish108/autotag-action@master
+        id: taggerTest
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          dry-run: 'true'
+
+      - name: verify Tags
+        run: |
+          if [ "${{ steps.tagger.outputs.new-tag }}" != "${{ steps.taggerTest.outputs.new-tag }}" ]
+          then
+            exit 1
+          fi
         
     - run: | 
         npm ci
@@ -60,12 +76,13 @@ jobs:
       env:
         GITSHA: ${{ github.sha }}
 
+    # very risky ... 
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     
-    - uses: phish108/autotag-action@master
+    - uses: phish108/autotag-action@1.1.26
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         branch: master
