--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -29,7 +29,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: 
+        - 14.x
 
     steps:
     - uses: actions/checkout@v2
