--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -8,7 +8,19 @@ on:
     branches: [ master ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14
+    - run: npm ci
+    - run: npm run lint
+    
   merge: 
+    needs: lint
     if: github.actor == 'phish108' ||  startsWith(github.actor, 'dependabot')
     
     runs-on: ubuntu-latest
