--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 secrets.json
 tryout.js
 
+# vscode configuration
+.vscode/
+
 # Logs
 logs
 *.log
@@ -65,7 +68,6 @@ typings/
 
 # Optional REPL history
 .node_repl_history
-
 
 # Output of 'npm pack'
 *.tgz
