--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: 14
     - run: npm ci
     - run: npm run lint
-    
+
   merge: 
     needs: lint
     if: github.actor == 'phish108' ||  startsWith(github.actor, 'dependabot')
@@ -33,8 +33,61 @@ jobs:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         MERGE_LABELS: ""
 
-  build:
+  test:
     needs: merge
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+
+    - name: Use Node.js 14
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14
+    
+    - id: tagger
+      uses: phish108/autotag-action@1.1.26
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        dry-run: 'TRUE'
+    
+    - name: Autotag Draft
+      uses: phish108/autotag-action@master
+      id: taggerTest
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        branch: master
+        dry-run: 'true'
+
+    - name: verify Tags
+      run: |
+        if [ "${{ steps.tagger.outputs.new-tag }}" != "${{ steps.taggerTest.outputs.new-tag }}" ]
+        then
+          exit 1
+        fi
+
+  verify: 
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: check changes
+        id: release
+        uses: phish108/release-check@1.0.3
+      - name: only dev changes
+        run: exit 1
+        if: ${{ steps.release.outputs.hold_development }}
+      - name: only protected changes
+        run: exit 1
+        if: ${{ steps.release.outputs.hold_protected }}
+      - name: Proceed to release
+        run: echo OK
+
+  build:
+    needs: verify
     if: github.actor == 'phish108' || startsWith(github.actor, 'dependabot')
 
     runs-on: ubuntu-latest
@@ -58,28 +111,12 @@ jobs:
         node-version: ${{ matrix.node-version }} 
     
     - id: tagger
-      uses: phish108/autotag-action@1.1.26
+      uses: phish108/autotag-action@1.1.29
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         branch: master
         dry-run: 'TRUE'
-    
-    # may fail
-    - name: Autotag Draft
-      uses: phish108/autotag-action@master
-      id: taggerTest
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        branch: master
-        dry-run: 'true'
-
-    - name: verify Tags
-      run: |
-        if [ "${{ steps.tagger.outputs.new-tag }}" != "${{ steps.taggerTest.outputs.new-tag }}" ]
-        then
-          exit 1
-        fi
-        
+         
     - run: | 
         npm ci
         npm run package
@@ -95,7 +132,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     
-    - uses: phish108/autotag-action@1.1.26
+    - uses: phish108/autotag-action@1.1.29
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         branch: master
