--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "ncc build index.js -o dist"
+    "lint": "eslint src/*",
+    "test": "mocha --exit",
+    "package": "ncc build src/index.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
     "@vercel/ncc": "0.26.2",
     "babel-eslint": "10.1.0",
     "eslint-plugin-babel": "5.3.1",
-    "eslint": "7.17.0"
+    "eslint": "7.17.0",
+    "chai": "4.2.0",
+    "mocha": "8.2.1"
   }
 }
