--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -66,10 +66,10 @@ jobs:
         id: release
         uses: phish108/release-check@1.0.11
       - name: only dev changes
-        run: exit 1
+        run: exit 0
         if: ${{ steps.release.outputs.hold_development == 'true' }}
       - name: only protected changes
-        run: exit 1
+        run: exit 0
         if: ${{ steps.release.outputs.hold_protected == 'true' }}
       - name: Proceed to release
         run: echo OK
@@ -81,6 +81,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: check changes
+      id: release
+      uses: phish108/release-check@1.0.11
+      
+    ## Skip building if nothing in the business logic has changed 
+    - run: exit 0
+      if: ${{ steps.release.outputs.proceed == 'false' }}
+      
     - uses: actions/checkout@v2
     - run: |
         git config --local user.email "action@github.com"
@@ -114,3 +122,5 @@ jobs:
     - uses: phish108/autotag-action@1.1.26
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        
+    # TODO: Add release step to create a new release for the marketplace
