--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -70,10 +70,10 @@ jobs:
       - name: check changes
         id: release
         uses: phish108/release-check@1.0.11
-      - name: only dev changes
+      - name: only dev changes (from PR)
         run: exit 1
         if: ${{ steps.release.outputs.hold_development == 'true' }}
-      - name: only protected changes
+      - name: only protected changes (from other non-main branch)
         run: exit 1
         if: ${{ steps.release.outputs.hold_protected == 'true' }}
       - name: Proceed to release
