--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,12 @@
 {
-    "parser": "babel-eslint",
     "env": {
         "node": true,
         "es6": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 7
+        "ecmaVersion": 13,
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
