--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 13,
-        "sourceType": "module"
+        // "sourceType": "module"
     },
     "rules": {
         "indent": [
