--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 13,
-        // "sourceType": "module"
+        "ecmaVersion": 13
     },
     "rules": {
         "indent": [
