minor changes in the merge workflow

--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -126,7 +126,7 @@ jobs:
       env:
         GITSHA: ${{ github.sha }}
 
-    # very risky ... 
+    # very risky ... because of using the master branch
     - name: Push changes
       if: ${{ steps.release.outputs.proceed == 'true' }}
       uses: ad-m/github-push-action@master
